--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=admin
-spring.data.mongodb.password=password
+spring.data.mongodb.uri=mongodb+srv://admin:ItG3nMVJxpNR0JHM@gettingstarted-itaqb.mongodb.net/test?retryWrites=true
 spring.data.mongodb.database=employee
-management.endpoints.web.exposure.include=
+management.endpoints.web.exposure.include=*
+
+
+
+
+
 
